--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
 	</head>
 	<body>
+        <!-- navbar -->
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container">
-				<a class="navbar-brand" href="#">Slank</a>
+				<a class="navbar-brand" href="index.html">
+                    <img src="img/logo.webp" alt="logo" width="50" height="40">
+                </a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
-				<div class="collapse navbar-collapse" id="navbarNav">
+				<div class="collapse navbar-collapse justify-content-center" id="navbarNav">
 					<ul class="navbar-nav">
 						<li class="nav-item">
 							<a class="nav-link" aria-current="page" href="#">Home</a>
@@ -34,6 +37,24 @@
 				</div>
 			</div>
 		</nav>
+        <!-- end navbar -->
+
+        <!-- hero -->
+        <section class="hero">
+            <div class="bg-light mt-3">
+                <div class="container">
+                    <div class="row align-items-center justify-content-center">
+                        <div class="col-md-6 text-center">
+                            Slank adalah grup musik Indonesia yang dibentuk oleh Bimbim pada 26 Desember 1983 karena bosan menjadi cover band (band yang menyanyikan lagu dari penyanyi atau band lain) dan punya keinginan untuk menciptakan dan membawakan lagu sendiri. Pada akhirnya, Slank menjadi salah satu grup musik yang berpengaruh di Indonesia. Pada tahun 2008 dan 2009, Slank disebut sebagai Indonesia's Highest-Paid Music Star (bintang musik berbayaran termahal) dengan honor Rp 500 Juta per show/tiap manggung.
+                        </div>
+                        <div class="col-sm-6">
+                            <picture>
+                                <img src="img/slank.png" alt="image-slank">
+                            </picture>
+                        </div>
+                    </div>
+                </div>
+        </section>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 	</body>
 </html>
