--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Slank</title>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
+        <!-- font -->
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap');
+        </style>
+        <link rel="stylesheet" href="style.css">
 	</head>
 	<body>
         <!-- navbar -->
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-expand-lg bg-light bg-transparent">
             <div class="container">
 				<a class="navbar-brand" href="index.html">
                     <img src="img/logo.webp" alt="logo" width="50" height="40">
@@ -19,16 +24,16 @@
 				<div class="collapse navbar-collapse justify-content-center" id="navbarNav">
 					<ul class="navbar-nav">
 						<li class="nav-item">
-							<a class="nav-link" aria-current="page" href="#">Home</a>
+							<a class="nav-link active" aria-current="page" href="#">Home</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">About</a>
+							<a class="nav-link" href="#about">About</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#">Galery</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Album</a>
+							<a class="nav-link" href="#">Albums</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#">Songs</a>
@@ -40,21 +45,37 @@
         <!-- end navbar -->
 
         <!-- hero -->
-        <section class="hero">
-            <div class="bg-light mt-3">
-                <div class="container">
-                    <div class="row align-items-center justify-content-center">
-                        <div class="col-md-6 text-center">
-                            Slank adalah grup musik Indonesia yang dibentuk oleh Bimbim pada 26 Desember 1983 karena bosan menjadi cover band (band yang menyanyikan lagu dari penyanyi atau band lain) dan punya keinginan untuk menciptakan dan membawakan lagu sendiri. Pada akhirnya, Slank menjadi salah satu grup musik yang berpengaruh di Indonesia. Pada tahun 2008 dan 2009, Slank disebut sebagai Indonesia's Highest-Paid Music Star (bintang musik berbayaran termahal) dengan honor Rp 500 Juta per show/tiap manggung.
-                        </div>
-                        <div class="col-sm-6">
-                            <picture>
-                                <img src="img/slank.png" alt="image-slank">
-                            </picture>
-                        </div>
+        <section id="hero">
+            <div class="container">
+                <div class="row mt-3">
+                    <div class="col-md-3 my-auto">
+                        <p><h3 class="text-color"><span class="fw-bold fs-1">S</span>lank</h3> grup musik Indonesia yang dibentuk oleh Bimbim pada 26 Desember 1983 karena bosan menjadi cover band (band yang menyanyikan lagu dari penyanyi atau band lain) dan punya keinginan untuk menciptakan dan membawakan lagu sendiri.
+                        </p>
+                    </div>
+                    <div class="col-md-9">
+                        <img class="" src="img/slank.webp" width="100%" title="slank" alt="slank">
                     </div>
                 </div>
+            </div>
         </section>
+
+        <section id="about">
+            <div class="container-fluid background text-light">
+                <div class="row text-center">
+                    <div class="col">
+                        <h1>About</h1>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-md-10">
+                        <p>
+                            <span class="bold">S</span>lank merupakan grup musik yang bermula dari Cikini Stones Complex (CSC) pada 25 Desember 1981, yaitu grup musik yang terdiri dari siswa SMA Perguruan Cikini, Jakarta. CSC terdiri dari Bimbim (drum), Boy (gitar), Kiki (gitar), Abi (bass), Uti (vokal), dan Well Willy (vokal), yang banyak mengekspresikan kecintaan pada lagu-lagu Rolling Stones. Grup tersebut tidak bertahan dan bubar, yang kemudian berlanjut menjadi Slank dengan perubahan personel 14 kali, hingga tahun 1996. Formasi terakhir Slank dimulai dari album ke-7, yang terdiri dari Bimbim (drum), Kaka (vokal), Ivanka (bass), Abdee (gitar) dan Ridho (gitar).
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 	</body>
 </html>
