--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
                 </div>
             </div>
         </section>
+        <!-- end hero -->
 
+        <!-- about -->
         <section id="about">
             <div class="container-fluid background text-light">
                 <div class="row text-center">
@@ -75,6 +77,7 @@
                 </div>
             </div>
         </section>
+        <!-- end about -->
 
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 	</body>
