--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         </style>
         <link rel="stylesheet" href="style.css">
 	</head>
-	<body>
+	<body id="home">
         <!-- navbar -->
-        <nav class="navbar navbar-expand-lg bg-light bg-transparent">
+        <nav class="navbar navbar-expand-lg bg-light sticky-top">
             <div class="container">
 				<a class="navbar-brand" href="index.html">
                     <img src="img/logo.webp" alt="logo" width="50" height="40">
@@ -21,10 +21,10 @@
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
-				<div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+				<div class="collapse navbar-collapse justify-content-end" id="navbarNav">
 					<ul class="navbar-nav">
 						<li class="nav-item">
-							<a class="nav-link active" aria-current="page" href="#">Home</a>
+							<a class="nav-link active" aria-current="page" href="#home">Home</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#about">About</a>
@@ -53,7 +53,7 @@
                         </p>
                     </div>
                     <div class="col-md-9">
-                        <img class="" src="img/slank.webp" width="100%" title="slank" alt="slank">
+                        <img src="img/slank.webp" width="100%" height="100%" title="slank" alt="slank">
                     </div>
                 </div>
             </div>
@@ -69,7 +69,7 @@
                     </div>
                 </div>
                 <div class="row justify-content-center">
-                    <div class="col-md-10">
+                    <div class="col-md-8">
                         <p>
                             <span class="bold">S</span>lank merupakan grup musik yang bermula dari Cikini Stones Complex (CSC) pada 25 Desember 1981, yaitu grup musik yang terdiri dari siswa SMA Perguruan Cikini, Jakarta. CSC terdiri dari Bimbim (drum), Boy (gitar), Kiki (gitar), Abi (bass), Uti (vokal), dan Well Willy (vokal), yang banyak mengekspresikan kecintaan pada lagu-lagu Rolling Stones. Grup tersebut tidak bertahan dan bubar, yang kemudian berlanjut menjadi Slank dengan perubahan personel 14 kali, hingga tahun 1996. Formasi terakhir Slank dimulai dari album ke-7, yang terdiri dari Bimbim (drum), Kaka (vokal), Ivanka (bass), Abdee (gitar) dan Ridho (gitar).
                         </p>
